<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <RadioButton android:id="@+id/x1_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x1_2"/>
    <RadioButton android:id="@+id/x3_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x3_4"/>
    <RadioButton android:id="@+id/x1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x1"
        android:checked="true"/>
    <RadioButton android:id="@+id/x2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x2"/>
    <RadioButton android:id="@+id/x3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x3"/>
    <RadioButton android:id="@+id/x4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x4"/>
</RadioGroup>